# ddse

./: Dockerfile  LICENSE  README.md  ShieldDB_supplier.py
BF-SRE/: BF-SRE.py  BF-SRE_join.py  BloomFilter.py  Diana_Core_for_DDSE.c  MyThread.py  MysqlOP.py  README.md  Util.py  test_BF-SRE.sh  test_BF-SRE_JOIN.sh
BF-SRE/SRE/: CMakeLists.txt  GGMNode.h  GGMTree.h  cSRE.cpp  cSRE_setup.py  main.cpp
BF-SRE/SRE/Hash/: SpookyV2.cpp
BVA-BVMA-DDSE_ShielDB_Seal/: Attack_dDSE.py  README.md  attacks.py  fig8b_SEALPaddingORAM.py  fig9ab_ShieldDB_ABVIA.py  fig9ab_ShieldDB_ABVIA_ShielDB.py  leak.py  test_recover.sh  utils.py
BVA-BVMA-DDSE_ShielDB_Seal/Datasets/: Gen_wiki_kws.py  lucene_wl_v_off.pkl  wiki_kws_dict.pkl  wiki_wl_v_off_SampleDataOfShieldDB.pkl
BVA-BVMA-DDSE_ShielDB_Seal/var/: Gen_wiki_kws_Shielddb.py  Wiki_DDSE_Size.pkl  wiki_kws_dict.pkl.tsS
Compare_AURAp/: CMakeLists.txt  README.md  main.cpp
Compare_AURAp/Core/: SSEClient.cpp  SSEClient.h  SSEClientHandler.h  SSEServerHandler.cpp  SSEServerHandler.h
Compare_AURAp/GGM/: GGMTree.cpp
Compare_AURAp/Util/: CommonUtil.c  CommonUtil.h
Compare_AURAp/gen-cpp/: SSEService.h  Server_types.cpp
Compare_Aura/: CMakeLists.txt  README.md  main.cpp
Compare_Aura/BF/: BloomFilter.h
Compare_Aura/BF/Hash/: SpookyV2.cpp
Compare_Aura/Core/: SSEClient.cpp  SSEClient.h  SSEClientHandler.cpp  SSEClientHandler.h  SSEServer.cpp  SSEServer.h  SSEServerHandler.cpp  SSEServerHandler.h
Compare_Aura/GGM/: GGMNode.h  GGMTree.h
Compare_Aura/Test/: AESTest.cpp  BloomFilterTest.cpp  GGMTest.cpp  SSETest.cpp
Compare_Aura/Thrift/: Server.thrift
Compare_Aura/Util/: CommonUtil.h
Compare_Aura/gen-cpp/: SSEService.cpp  SSEService_server.skeleton.cpp  Server_constants.cpp  Server_constants.h  Server_types.h
Compare_MITRAp/: Diana_Core_for_DDSE.c  MITRAPP.sh  MITRAPP_core.c  MITRAPad.py  MysqlOP.py  Padding.py  README.md  Util.py  check.sh  setup_MITRAPP.py
Compare_Seal/: AdjORAM.py  Encap_ORAM.cpp  README.md  Seal.py  Simple_test_seal.py  Util.py  Utilities.h  check.sh  setup_ORAM.py  test_AdjORAM.py  test_Seal.py  test_Seal.sh  utilities.py
Compare_ShieldDB/: Gen.sh  README.md  ShieldDB_Supporter.py  search_operation.py  search_operation.py.join
DB_Gen/Crime_USENIX/: id_keyword_search_list.bson  id_keyword_search_list.metadata.json  id_keywords.metadata.json  system.indexes.bson
DB_Gen/Crime_USENIX_JOIN/: id_keyword_search_list.bson  id_keyword_search_list.metadata.json  id_keyword_search_list_dis.bson  id_keyword_search_list_dis.metadata.json  id_keywords.bson  id_keywords.metadata.json  system.indexes.bson
DB_Gen/DDSE2022VAERSVAXC/: id_keywords.metadata.json  (+3 more)
Scheme_BF-IPE-P/: BF-IPE-P_test_mongomysql.py  BloomFilter.py  DDSE3_core.c  DDSE3_test_mongomysql.py  Diana_Core_for_DDSE.c  README.md  ipe.py  setup_Diana.py  test_BF-IPE.sh
Scheme_BF-SRE/: BF-SRE.py  BloomFilter.py  DDSE2_core.c  Diana_Core_for_DDSE.c  README.md  SRE_Boost.py  SRE_test.py  setup_DDSE2.py  setup_Diana.py  test_BF-SRE.sh  test_BF_SRE_Greed.py  test_BF_SRE_Parallel.py
Scheme_BF-SRE/SRE/: BloomFilter.h  CMakeLists.txt  CommonUtil.c  CommonUtil.h  SRE.py  SRE_Encap.cpp  SRE_Encap.h  SRE_test.py  cSRE_setup.py  test_cSRE.py
Scheme_BF-SRE/SRE/Hash/: SpookyV2.h
Scheme_BF-SRE/SRE/bu/: CMakeCache.txt  Makefile  SRE  cmake_install.cmake
Scheme_MITRAPP/: MITRAPP.sh  MITRAPP_test_mongomysql.py  MITRAPadding_test_mongomysql.py  README.md  setup_DianaM.py  simple_mitrapp_test.py  test_MITRAPP.sh
Simulate_Seal_in_python/: AdjORAM.py  Encap_OMAP.cpp  OMAP.cpp  ORAM.cpp  README.md  Seal.py  setup_OMAP.py  test_ORAM.py  test_Oidct.py  test_Seal.py  test_Seal.sh  test_Seal_join.py
(+26 files in other folders)
